--- a/index.html
+++ b/index.html
@@ -72,23 +72,28 @@
             </div>
           </div>
         </div>
-        <div class="main col-sm-9 col-12">
+        <div class="main col-md-9 col-12">
           <div id="bio" class="section">
             <!-- <div class="section-header">
               <h2>Research</h2>
             </div> -->
             <p>
-              Ziyang Li is a final year PhD student from the <a target="_blank" href="https://upenn.edu">University of Pennsylvania</a>, advised by <a target="_blank" href="https://www.cis.upenn.edu/~mhnaik/">Prof. Mayur Naik</a>.
-              He works in the intersection of Programming Languages (PL) and Machine Learning (ML), specifically in the area of Neurosymbolic Programming, Program Analysis, and Security.
-              Recently, he is focusing on building and extending the <a target="_blank" href="https://scallop-lang.github.io/">Scallop</a>, a neurosymbolic programming language, that aims to bridge the gap between neural networks and symbolic reasoning components.
-              The language has led to diverse applications in the domain of natural language processing (NLP), computer vision (CV), security, health, and bioinformatics.
-              He is awarded the <a target="_blank" href="https://blog.seas.upenn.edu/amazon-provides-gift-to-10-penn-engineering-phd-students-for-work-on-trustworthy-ai/">AWS Fellowship</a> for conducting research on trustworthy AI.
+              Welcome!
+              I'm a PhD candidate in Computer Science at the <a target="_blank" href="https://upenn.edu">University of Pennsylvania</a>, advised by <a target="_blank" href="https://www.cis.upenn.edu/~mhnaik/">Prof. Mayur Naik</a>.
+              My primary area of research is <strong>programming languages</strong>.
+              My research also spans the fields of <strong>machine learning</strong> and <strong>security</strong>.
             </p>
             <p>
-              Before his PhD, he obtained his dual B.S. degree on Computer Science and Mathematics from the <a target="_blank" href="https://ucsd.edu">UCSD</a>, where he was advised by <a target="_blank" href="https://cseweb.ucsd.edu//~ravir/">Prof. Ravi Ramamoorthi</a> on topics within Computer Graphics (CG).
-              He also spent a year working in <a target="_blank" href="https://designlab.ucsd.edu">UCSD Design Lab</a> on HCI with <a target="_blank" href="https://d.ucsd.edu/srk/">Prof. Scott Klemmer</a>.
-              In his spare time, he is a Piano enthusiast and the keyboardist of the band, <a target="_blank" href="https://www.instagram.com/the_protagonists_band/">The Protagonists</a>, where he plays Jazz, Fusion, and Pop music.
-              His favorite programming language is <a target="_blank" href="https://rust-lang.org">Rust</a>.
+              My dissertation research is focused on neurosymbolic programming, an emerging paradigm that bridges the gap between deep learning and logical reasoning.
+              To this end, I have developed <a target="_blank" href="https://scallop-lang.github.io/">Scallop</a>, a general-purpose neurosymbolic programming language and compiler toolchain.
+              Scallop has been used to develop diverse applications in the domains of natural language processing (NLP), computer vision (CV), cybersecurity, clinical-decision making, and bioinformatics.
+              I was awarded the <a target="_blank" href="https://blog.seas.upenn.edu/amazon-provides-gift-to-10-penn-engineering-phd-students-for-work-on-trustworthy-ai/">AWS Fellowship in 2022</a> for my research on trustworthy AI.
+            </p>
+            <p>
+              Before my PhD, I obtained a dual B.S. degree in Computer Science and Mathematics from the <a target="_blank" href="https://ucsd.edu">UCSD</a>, where I conducted research in computer graphics with <a target="_blank" href="https://cseweb.ucsd.edu//~ravir/">Prof. Ravi Ramamoorthi</a>.
+              I also spent a year working in the <a target="_blank" href="https://designlab.ucsd.edu">UCSD Design Lab</a> on HCI with <a target="_blank" href="https://d.ucsd.edu/srk/">Prof. Scott Klemmer</a>.
+              In my spare time, I am a Piano enthusiast and the keyboardist of the band, <a target="_blank" href="https://www.instagram.com/the_protagonists_band/">The Protagonists</a>, where I play Jazz, Fusion, and Pop music.
+              My favorite programming language is Rust!
             </p>
           </div>
           <div id="news" class="section">
@@ -319,7 +324,7 @@
               <ul class="publications list-group">
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
-                    <strong class="title">Neurosymbolic RNA Secondary Structure Prediction</strong>
+                    <strong class="title">Enhancing RNA Secondary Structure Prediction via Neuro-Symbolic Learning</strong>
                     <span class="conference">Preprint</span>
                   </div>
                   <div class="authors">
