Adding new preprint

--- a/index.html
+++ b/index.html
@@ -115,6 +115,22 @@
               <ul class="publications list-group">
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
+                    <strong class="title">Lobster: A GPU-Accelerated Framework for Neurosymbolic Programming</strong>
+                    <span class="conference">Preprint</span>
+                  </div>
+                  <div class="authors">
+                    <span>Paul Biberstein</span>
+                    <span class="me">Ziyang Li</span>
+                    <span>Joseph Devietti</span>
+                    <span>Mayur Naik</span>
+                  </div>
+                  <div>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="#">Code</a>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="#">Preprint</a>
+                  </div>
+                </li>
+                <li class="publication list-group-item list-group-item-action">
+                  <div class="header">
                     <strong class="title">Neurosymbolic Programming with Scallop: Principles and Practice</strong>
                     <span class="conference">Foundations and Trends in Programming Languages 2024 (To Appear)</span>
                   </div>
