--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               My dissertation research is focused on neurosymbolic programming, an emerging paradigm that bridges the gap between deep learning and logical reasoning.
               To this end, I have developed <a target="_blank" href="https://scallop-lang.github.io/">Scallop</a>, a general-purpose neurosymbolic programming language and compiler toolchain.
               Scallop has been used to develop diverse applications in the domains of natural language processing (NLP), computer vision (CV), cybersecurity, clinical-decision making, and bioinformatics.
-              I was awarded the <a target="_blank" href="https://blog.seas.upenn.edu/amazon-provides-gift-to-10-penn-engineering-phd-students-for-work-on-trustworthy-ai/">AWS Fellowship in 2022</a> for my research on trustworthy AI.
+              I was awarded the <a target="_blank" href="https://blog.seas.upenn.edu/amazon-provides-gift-to-10-penn-engineering-phd-students-for-work-on-trustworthy-ai/">AWS Fellowship in 2023</a> for my research on trustworthy AI.
             </p>
             <p>
               Before my PhD, I obtained a dual B.S. degree in Computer Science and Mathematics from the <a target="_blank" href="https://ucsd.edu">UCSD</a>, where I conducted research in computer graphics with <a target="_blank" href="https://cseweb.ucsd.edu//~ravir/">Prof. Ravi Ramamoorthi</a>.
@@ -103,6 +103,9 @@
             <ul>
               <li class="news-item">
                 <strong style="color: red">I will be on the academic job market for the 2024-25 cycle!</strong>
+              </li>
+              <li class="news-item">
+                Nov 18, 2025 - I passed my dissertation proposal on <i>Neurosymbolic Programming in Scallop: Design, Implementation, and Applications</i>!</strong>
               </li>
             </ul>
           </div>
