Fixing page title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/basics.css" />
     <link rel="stylesheet" href="css/vendor/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/vendor/font-awesome/font-awesome.min.css" />
-    <title>Ziyang Li - University of Pennsylvania</title>
+    <title>Ziyang Li's Homepage</title>
   </head>
   <body>
     <nav class="nav">
