--- a/index.html
+++ b/index.html
@@ -165,6 +165,24 @@
                 </li>
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
+                    <strong class="title">Data-Efficient Learning with Neural Programs</strong>
+                    <span class="conference">NeurIPS 2024</span>
+                  </div>
+                  <div class="authors">
+                    <span>Alaia Solko-Breslin</span>
+                    <span>Seewon Choi</span>
+                    <span class="me">Ziyang Li</span>
+                    <span>Neelay Velingker</span>
+                    <span>Rajeev Alur</span>
+                    <span>Mayur Naik</span>
+                    <span>Eric Wong</span>
+                  </div>
+                  <div>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://arxiv.org/abs/2406.06246">ArXiv</a>
+                  </div>
+                </li>
+                <li class="publication list-group-item list-group-item-action">
+                  <div class="header">
                     <strong class="title">Relational Programming with Foundation Models</strong>
                     <span class="conference">AAAI 2024</span>
                   </div>
@@ -403,26 +421,8 @@
               </ul>
             </div>
             <div class="publication-section">
-              <h6>Other Neurosymbolic Applications:</h6>
+              <h6>Other Applications:</h6>
               <ul class="publications list-group">
-                <li class="publication list-group-item list-group-item-action">
-                  <div class="header">
-                    <strong class="title">Data-Efficient Learning with Neural Programs</strong>
-                    <span class="conference">NeurIPS 2024</span>
-                  </div>
-                  <div class="authors">
-                    <span>Alaia Solko-Breslin</span>
-                    <span>Seewon Choi</span>
-                    <span class="me">Ziyang Li</span>
-                    <span>Neelay Velingker</span>
-                    <span>Rajeev Alur</span>
-                    <span>Mayur Naik</span>
-                    <span>Eric Wong</span>
-                  </div>
-                  <div>
-                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://arxiv.org/abs/2406.06246">ArXiv</a>
-                  </div>
-                </li>
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
                     <strong class="title">Towards Faithful and High-Fiedlity Synthesis of Driving Scene Videos</strong>
