--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <strong style="color: red">I will be on the academic job market for the 2024-25 cycle!</strong>
               </li>
               <li class="news-item">
-                Nov 18, 2025 - I passed my dissertation proposal on <i>Neurosymbolic Programming in Scallop: Design, Implementation, and Applications</i>!</strong>
+                Nov 18, 2024 - I defended my dissertation proposal on <i>Neurosymbolic Programming in Scallop: Design, Implementation, and Applications</i>!</strong>
               </li>
             </ul>
           </div>
