Adding lobster paper

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   </div>
                   <div>
                     <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="#">Code</a>
-                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="#">Preprint</a>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="res/papers/lobster.pdf">Preprint</a>
                   </div>
                 </li>
                 <li class="publication list-group-item list-group-item-action">
