--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
             <ul>
               <li class="news-item">
                 <strong style="color: red">I will be on the academic job market for the 2024-25 cycle!</strong>
-                Here is my <a href="res/cv/cv-11-30-2024.pdf">CV</a>, <a href="res/statements/teaching_statement_ziyang_li.pdf">Teaching Statement</a>, and <a href="res/statements/research_statement_ziyang_li.pdf">.
+                Here is my <a href="res/cv/cv-11-30-2024.pdf">CV</a>, <a href="res/statements/teaching_statement_ziyang_li.pdf">Teaching Statement</a>, and <a href="res/statements/research_statement_ziyang_li.pdf">Research Statement</a>.
               </li>
               <li class="news-item">
-                Nov 18, 2024 - I defended my dissertation proposal on <i>Neurosymbolic Programming in Scallop: Design, Implementation, and Applications</i>!</strong>
+                Nov 18, 2024 - I defended my dissertation proposal on <i>Neurosymbolic Programming in Scallop: Design, Implementation, and Applications</i>!
               </li>
             </ul>
           </div>
