--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <i class="fa fa-university icon"></i> <a href="https://www.cis.upenn.edu" target="_blank">Computer and Information Science</a>
             </div>
             <div class="sidebar-item">
-              <i class="fa fa-graduation-cap icon"></i> <a href="res/cv/cv-11-30-2024.pdf" target="_blank">Curriculum Vitae</a>
+              <i class="fa fa-graduation-cap icon"></i> <a href="res/cv/cv-new.pdf" target="_blank">Curriculum Vitae</a>
             </div>
             <div class="sidebar-item">
               Education:
@@ -102,8 +102,8 @@
             </div>
             <ul>
               <li class="news-item">
-                <strong style="color: red">I will be on the academic job market for the 2024-25 cycle!</strong>
-                Here is my <a href="res/cv/cv-11-30-2024.pdf">CV</a>, <a href="res/statements/teaching_statement_ziyang_li.pdf">Teaching Statement</a>, and <a href="res/statements/research_statement_ziyang_li.pdf">Research Statement</a>.
+                <strong style="color: red">I am on the academic job market for the 2024-25 cycle!</strong>
+                Here is my <strong><a href="res/cv/cv-new.pdf">CV</a></strong>, <strong><a href="res/statements/teaching_statement_ziyang_li.pdf">Teaching Statement</a></strong>, and <a href="res/statements/research_statement_ziyang_li.pdf">Research Statement</a>.
               </li>
               <li class="news-item">
                 Nov 18, 2024 - I defended my dissertation proposal on <i>Neurosymbolic Programming in Scallop: Design, Implementation, and Applications</i>!
