Removing the rna preprint for now

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             <div class="publication-section">
               <h6>Health and Bioinformatics:</h6>
               <ul class="publications list-group">
-                <li class="publication list-group-item list-group-item-action">
+                <!-- <li class="publication list-group-item list-group-item-action">
                   <div class="header">
                     <strong class="title">Enhancing RNA Secondary Structure Prediction via Neuro-Symbolic Learning</strong>
                     <span class="conference">Preprint</span>
@@ -372,7 +372,7 @@
                     <span>Mayur Naik</span>
                     <span>Li Shen</span>
                   </div>
-                </li>
+                </li> -->
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
                     <strong class="title">Crowd-sourced machine learning prediction of Long COVID using data from the National COVID Cohort Collaborative</strong>
