--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <ul>
               <li class="news-item">
                 <strong style="color: red">I am on the academic job market for the 2024-25 cycle!</strong>
-                Here is my <strong><a href="res/cv/cv-new.pdf">CV</a></strong>, <strong><a href="res/statements/teaching_statement_ziyang_li.pdf">Teaching Statement</a></strong>, and <a href="res/statements/research_statement_ziyang_li.pdf">Research Statement</a>.
+                Here is my <strong><a href="res/cv/cv-new.pdf">CV</a></strong>, <strong><a href="res/statements/teaching_statement_ziyang_li.pdf">Teaching Statement</a></strong>, and <strong><a href="res/statements/research_statement_ziyang_li.pdf">Research Statement</a></strong>.
               </li>
               <li class="news-item">
                 Nov 18, 2024 - I defended my dissertation proposal on <i>Neurosymbolic Programming in Scallop: Design, Implementation, and Applications</i>!
