Updating our ICST 2025 paper

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
                     <strong class="title">Understanding the Effectiveness of Large Language Models in Detecting Security Vulnerabilities</strong>
-                    <span class="conference">Preprint</span>
+                    <span class="conference">ICST 2025</span>
                   </div>
                   <div class="authors">
                     <span>Avishree Khare</span>
