Updating TACPS workshop

--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
                 Here is my <strong><a href="res/cv/cv-new.pdf">CV</a></strong>, <strong><a href="res/statements/teaching_statement_ziyang_li.pdf">Teaching Statement</a></strong>, and <strong><a href="res/statements/research_statement_ziyang_li.pdf">Research Statement</a></strong>.
               </li>
               <li class="news-item">
+                Dec 20, 2024 - I will be co-organizing the <a target="_blank" href="https://www.tacps.org">3rd TACPS Workshop</a> which will happen with CAV 2025!
+              </li>
+              <li class="news-item">
                 Nov 18, 2024 - I defended my dissertation proposal on <i>Neurosymbolic Programming in Scallop: Design, Implementation, and Applications</i>!
               </li>
             </ul>
@@ -522,6 +525,7 @@
             </ul>
             <h6>Professional Services:</h6>
             <ul>
+              <li>Co-organizer, TACPS Workshop 2025</li>
               <li>Reviewer, NeurIPS <i>2024</i></li>
               <li>Reviewer, ICLR - <i>2023, 2024, 2025</i></li>
               <li>Reviewer, ICML - <i>2024</i></li>
