Add talk in HKUST

--- a/index.html
+++ b/index.html
@@ -449,6 +449,10 @@
             </div>
             <ul class="talks list-group">
               <li class="talk list-group-item list-group-item-action">
+                <strong class="date">Dec 19, 2024</strong>
+                Invited talk on Scallop and Neurosymbolic Programming @ HKUST
+              </li>
+              <li class="talk list-group-item list-group-item-action">
                 <strong class="date">Oct 11, 2024</strong>
                 Invited talk on Scallop and Neurosymbolic Programming @ Columbia University
               </li>
