Add link to seminar

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             <ul class="talks list-group">
               <li class="talk list-group-item list-group-item-action">
                 <strong class="date">Dec 19, 2024</strong>
-                Invited talk on Scallop and Neurosymbolic Programming @ HKUST
+                Invited talk on Scallop and Neurosymbolic Programming @ <a target="_blank" href="http://sepl-hkust.github.io/">HKUST SEPL Seminar</a>
               </li>
               <li class="talk list-group-item list-group-item-action">
                 <strong class="date">Oct 11, 2024</strong>
