--- a/index.html
+++ b/index.html
@@ -364,18 +364,30 @@
             <div class="publication-section">
               <h6>Health and Bioinformatics:</h6>
               <ul class="publications list-group">
-                <!-- <li class="publication list-group-item list-group-item-action">
+                <li class="publication list-group-item list-group-item-action">
                   <div class="header">
-                    <strong class="title">Enhancing RNA Secondary Structure Prediction via Neuro-Symbolic Learning</strong>
+                    <strong class="title">Advances in RNA secondary structure prediction and RNA modifications: Methods, data, and applications</strong>
                     <span class="conference">Preprint</span>
                   </div>
                   <div class="authors">
-                    <span class="me">Ziyang Li*</span>
-                    <span>Shu Yang*</span>
+                    <span>Shu Yang</span>
+                    <span>Nhat Truong Pham</span>
+                    <span class="me">Ziyang Li</span>
+                    <span>Jae Young Baik</span>
+                    <span>Joseph Lee</span>
+                    <span>Tianhua Zhai</span>
+                    <span>Weicheng Yu</span>
+                    <span>Bojian Hou</span>
+                    <span>Tianqi Shang</span>
+                    <span>Weiqing He</span>
+                    <span>Duy Duong-Tran</span>
                     <span>Mayur Naik</span>
                     <span>Li Shen</span>
                   </div>
-                </li> -->
+                  <div>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="res/papers/rss_and_application25.pdf">Paper</a>
+                  </div>
+                </li>
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
                     <strong class="title">Crowd-sourced machine learning prediction of Long COVID using data from the National COVID Cohort Collaborative</strong>
