--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <span>Mayur Naik</span>
                   </div>
                   <div>
-                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://www.cis.upenn.edu/~jianih/res/publications/Relational_Programming_with_Foundation_Models/scallop_aaai24.pdf">Paper</a>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="res/papers/scallop-aaai24.pdf">Paper</a>
                     <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://github.com/scallop-lang/scallop/tree/master/etc/scallopy-plugins">Plugin Library</a>
                   </div>
                 </li>
