--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
                     <strong class="title">Neurosymbolic Programming with Scallop: Principles and Practice</strong>
-                    <span class="conference">Foundations and Trends in Programming Languages 2024 (To Appear)</span>
+                    <span class="conference">Foundations and Trends in Programming Languages 2024</span>
                   </div>
                   <div class="authors">
                     <span class="me">Ziyang Li</span>
@@ -149,7 +149,7 @@
                   </div>
                   <div>
                     <strong>Invited Monograph</strong>
-                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="res/papers/scallop-principles-practice.pdf">Preprint</a>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="res/papers/scallop-ftpl24.pdf">Paper</a>
                   </div>
                 </li>
                 <li class="publication list-group-item list-group-item-action">
@@ -183,6 +183,7 @@
                   </div>
                   <div>
                     <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://arxiv.org/abs/2406.06246">ArXiv</a>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://github.com/alaiasolkobreslin/ISED">Github</a>
                   </div>
                 </li>
                 <li class="publication list-group-item list-group-item-action">
