Adding github link for tygr

--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
                   </div>
                   <div>
                     <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://www.cis.upenn.edu/~alur/Usenix-Security24.pdf">Paper</a>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://github.com/sefcom/TYGR">Github</a>
                   </div>
                 </li>
                 <li class="publication list-group-item list-group-item-action">
