--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
               </li>
               <li class="talk list-group-item list-group-item-action">
                 <strong class="date">Jun 10-11, 2024</strong>
-                Scallop tutorial @ <a target="_blank" href="https://www.neurosymbolic.org/summerschool2024.html">Summer School of Neurosymbolic Programming</a>
+                Scallop tutorial @ <a target="_blank" href="https://www.neurosymbolic.org/summerschool2024.html">Summer School of Neurosymbolic Programming (SSNP'24)</a>
                 <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://www.scallop-lang.org/ssnp24/index.html">Tutorial</a>
               </li>
               <li class="talk list-group-item list-group-item-action">
@@ -511,7 +511,7 @@
               </li>
               <li class="talk list-group-item list-group-item-action">
                 <strong class="date">Jun 1-2, 2022</strong>
-                Tutorial on Scallop @ <a target="_blank" href="https://fm.csl.sri.com/SSFT22/">Summer School of Formal Techniques'22</a>
+                Tutorial on Scallop @ <a target="_blank" href="https://fm.csl.sri.com/SSFT22/">Summer School of Formal Techniques (SSFT'22)</a>
                 <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://www.scallop-lang.org/ssft22/index.html">Tutorial</a>
                 <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://www.scallop-lang.org/ssft22/index.html">Slides</a>
               </li>
