Adding arxiv link

--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@
                     <span>Li Shen</span>
                   </div>
                   <div>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://arxiv.org/abs/2501.04056">Arxiv</a>
                     <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="res/papers/rss_and_application25.pdf">Paper</a>
                   </div>
                 </li>
