Adding new paper

--- a/index.html
+++ b/index.html
@@ -444,6 +444,22 @@
               <ul class="publications list-group">
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
+                    <strong class="title">NeuroStrata: Harnessing Neurosymbolic Paradigms for Improved Design, Testability, and Verifiability of Autonomous CPS</strong>
+                    <span class="conference">Preprint</span>
+                  </div>
+                  <div class="authors">
+                    <span>Xi Zheng</span>
+                    <span class="me">Ziyang Li</span>
+                    <span>Ivan Ruchkin</span>
+                    <span>Ruzica Piskac</span>
+                    <span>Miroslav Pajic</span>
+                  </div>
+                  <div>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="res/papers/neurostrata.pdf">Paper</a>
+                  </div>
+                </li>
+                <li class="publication list-group-item list-group-item-action">
+                  <div class="header">
                     <strong class="title">Towards Faithful and High-Fiedlity Synthesis of Driving Scene Videos</strong>
                     <span class="conference">Preprint</span>
                   </div>
