--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
               </ul>
             </div>
             <div class="publication-section">
-              <h6>Other Applications:</h6>
+              <h6>Others:</h6>
               <ul class="publications list-group">
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
