--- a/index.html
+++ b/index.html
@@ -470,6 +470,24 @@
                     <span>Ser-Nam Lim</span>
                     <span>Mayur Naik</span>
                   </div>
+                  <div>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="res/papers/tp2v.pdf">Paper</a>
+                  </div>
+                </li>
+                <li class="publication list-group-item list-group-item-action">
+                  <div class="header">
+                    <strong class="title">Numerical Reasoning over Legal Contracts via Relational Database</strong>
+                    <span class="conference">NeurIPS 2021 Workshop on Databases and AI</span>
+                  </div>
+                  <div class="authors">
+                    <span>Jiani Huang</span>
+                    <span class="me">Ziyang Li</span>
+                    <span>Ilias Fountalis</span>
+                    <span>Mayur Naik</span>
+                  </div>
+                  <div>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="res/papers/numerical_relational_legal.pdf">Paper</a>
+                  </div>
                 </li>
               </ul>
             </div>
