--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
                   <div class="header">
                     <strong class="title">Lobster: A GPU-Accelerated Framework for Neurosymbolic Programming</strong>
                     <span class="conference">Preprint</span>
+                    <span class="conference">2025</span>
                   </div>
                   <div class="authors">
                     <span>Paul Biberstein</span>
@@ -156,6 +157,7 @@
                   <div class="header">
                     <strong class="title">LASER: A Neuro-Symbolic Framework for Learning Spatial-Temporal Scene Graphs with Weak Supervision</strong>
                     <span class="conference">Preprint</span>
+                    <span class="conference">2025</span>
                   </div>
                   <div class="authors">
                     <span>Jiani Huang</span>
@@ -269,6 +271,7 @@
                   <div class="header">
                     <strong class="title">LLM-Assisted Static Analysis for Detecting Security Vulnerabilities</strong>
                     <span class="conference">Preprint</span>
+                    <span class="conference">2025</span>
                   </div>
                   <div class="authors">
                     <span class="me">Ziyang Li</span>
@@ -370,6 +373,7 @@
                   <div class="header">
                     <strong class="title">Advances in RNA secondary structure prediction and RNA modifications: Methods, data, and applications</strong>
                     <span class="conference">Preprint</span>
+                    <span class="conference">2025</span>
                   </div>
                   <div class="authors">
                     <span>Shu Yang</span>
@@ -446,6 +450,7 @@
                   <div class="header">
                     <strong class="title">NeuroStrata: Harnessing Neurosymbolic Paradigms for Improved Design, Testability, and Verifiability of Autonomous CPS</strong>
                     <span class="conference">Preprint</span>
+                    <span class="conference">2025</span>
                   </div>
                   <div class="authors">
                     <span>Xi Zheng</span>
@@ -462,6 +467,7 @@
                   <div class="header">
                     <strong class="title">Towards Faithful and High-Fiedlity Synthesis of Driving Scene Videos</strong>
                     <span class="conference">Preprint</span>
+                    <span class="conference">2024</span>
                   </div>
                   <div class="authors">
                     <span>Jiani Huang</span>
