--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
                 Here is my <strong><a href="res/cv/cv-new.pdf">CV</a></strong>, <strong><a href="res/statements/teaching_statement_ziyang_li.pdf">Teaching Statement</a></strong>, and <strong><a href="res/statements/research_statement_ziyang_li.pdf">Research Statement</a></strong>.
               </li>
               <li class="news-item">
+                Jan 22, 2025 - Two of our papers got accepted to ICLR 2025!
+              </li>
+              <li class="news-item">
                 Dec 20, 2024 - I will be co-organizing the <a target="_blank" href="https://www.tacps.org">3rd TACPS Workshop</a> which will happen with CAV 2025!
               </li>
               <li class="news-item">
@@ -156,8 +159,7 @@
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
                     <strong class="title">LASER: A Neuro-Symbolic Framework for Learning Spatial-Temporal Scene Graphs with Weak Supervision</strong>
-                    <span class="conference">Preprint</span>
-                    <span class="conference">2025</span>
+                    <span class="conference">ICLR 2025</span>
                   </div>
                   <div class="authors">
                     <span>Jiani Huang</span>
@@ -270,8 +272,7 @@
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
                     <strong class="title">LLM-Assisted Static Analysis for Detecting Security Vulnerabilities</strong>
-                    <span class="conference">Preprint</span>
-                    <span class="conference">2025</span>
+                    <span class="conference">ICLR 2025</span>
                   </div>
                   <div class="authors">
                     <span class="me">Ziyang Li</span>
