--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
                     <strong class="title">Neurosymbolic Programming with Scallop: Principles and Practice</strong>
-                    <span class="conference">Foundations and Trends in Programming Languages 2024</span>
+                    <span class="conference">Foundations and Trends in Programming Languages, 2024</span>
                   </div>
                   <div class="authors">
                     <span class="me">Ziyang Li</span>
@@ -169,6 +169,8 @@
                   <div>
                     <strong>Invited Monograph</strong>
                     <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="res/papers/scallop-ftpl24.pdf">Paper</a>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://www.amazon.com/Neurosymbolic-Programming-Scallop-Principles-Practice/dp/1638284849">Buy the Book on Amazon!</a>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="img/adhoc/scallop-monograph.jpg">Picture</a>
                   </div>
                 </li>
                 <li class="publication list-group-item list-group-item-action">
