--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
                   </div>
                   <div>
                     <strong>Invited Monograph</strong>
-                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="res/papers/scallop-ftpl24.pdf">Paper</a>
-                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://www.amazon.com/Neurosymbolic-Programming-Scallop-Principles-Practice/dp/1638284849">Buy the Book on Amazon!</a>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="res/papers/scallop-ftpl24.pdf">Book</a>
                     <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="img/adhoc/scallop-monograph.jpg">Picture</a>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://www.amazon.com/Neurosymbolic-Programming-Scallop-Principles-Practice/dp/1638284849">Buy it on Amazon</a>
                   </div>
                 </li>
                 <li class="publication list-group-item list-group-item-action">
