--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
                     <span>Mayur Naik</span>
                   </div>
                   <div>
+                    <strong>🏆 MIT Programming Languages Review 2025</strong>
                     <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://arxiv.org/abs/2304.04812">ArXiv</a>
                     <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://dl.acm.org/doi/10.1145/3591280">Paper</a>
                     <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://zenodo.org/records/7804200">Zenodo</a>
