--- a/index.html
+++ b/index.html
@@ -453,8 +453,7 @@
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
                     <strong class="title">NeuroStrata: Harnessing Neurosymbolic Paradigms for Improved Design, Testability, and Verifiability of Autonomous CPS</strong>
-                    <span class="conference">Preprint</span>
-                    <span class="conference">2025</span>
+                    <span class="conference">FSE 2025 IVR Track</span>
                   </div>
                   <div class="authors">
                     <span>Xi Zheng</span>
