Adding a new paper

--- a/index.html
+++ b/index.html
@@ -274,6 +274,28 @@
               <ul class="publications list-group">
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
+                    <strong class="title">Challenges and Paths Towards AI for Software Engineering</strong>
+                    <span class="conference">Preprint</span>
+                  </div>
+                  <div class="authors">
+                    <span>Alex Gu</span>
+                    <span>Naman Jain</span>
+                    <span>Wen-Ding Li</span>
+                    <span>Manish Shetty</span>
+                    <span>Yijia Shao</span>
+                    <span class="me">Ziyang Li</span>
+                    <span>Diyi Yang</span>
+                    <span>Kevin Ellis</span>
+                    <span>Koushik Sen</span>
+                    <span>Armando Solar-Lezama</span>
+                  </div>
+                  <div>
+                    <!-- <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://arxiv.org/abs/2405.17238">ArXiv</a>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://github.com/liby99/cwe-bench-java">Dataset</a> -->
+                  </div>
+                </li>
+                <li class="publication list-group-item list-group-item-action">
+                  <div class="header">
                     <strong class="title">LLM-Assisted Static Analysis for Detecting Security Vulnerabilities</strong>
                     <span class="conference">ICLR 2025</span>
                   </div>
