--- a/index.html
+++ b/index.html
@@ -125,6 +125,28 @@
               <ul class="publications list-group">
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
+                    <strong class="title">ESCA: Contextualizing Embodied Agents via Scene-Graph Generation</strong>
+                    <span class="conference">Preprint</span>
+                    <span class="conference">2025</span>
+                  </div>
+                  <div class="authors">
+                    <span>Jiani Huang</span>
+                    <span class="me">Ziyang Li</span>
+                    
+                    <span>Matthew Kuo</span>
+                    <span>Amish Sethi</span>
+                    <span>Neelay Velingker</span>
+                    <span>Mayank Keoliya</span>
+                    <span>Ser-Nam Lim</span>
+                    <span>Mayur Naik</span>
+                  </div>
+                  <div>
+                    <!-- <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="#">Code</a> -->
+                    <!-- <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="res/papers/lobster.pdf">Preprint</a> -->
+                  </div>
+                </li>
+                <li class="publication list-group-item list-group-item-action">
+                  <div class="header">
                     <strong class="title">Lobster: A GPU-Accelerated Framework for Neurosymbolic Programming</strong>
                     <span class="conference">Preprint</span>
                     <span class="conference">2025</span>
@@ -272,6 +294,24 @@
             <div class="publication-section">
               <h6>Security and Program Analysis:</h6>
               <ul class="publications list-group">
+                <li class="publication list-group-item list-group-item-action">
+                  <div class="header">
+                    <strong class="title">Synthesizing Intermediate Program States for Efficient Directed Fuzzing</strong>
+                    <span class="conference">Preprint</span>
+                  </div>
+                  <div class="authors">
+                    <span>Jie Zhu</span>
+                    <span>Chihao Shen</span>
+                    <span class="me">Ziyang Li</span>
+                    <span>Jiahao Yu</span>
+                    <span>Yizheng Chen</span>
+                    <span>Kexin Pei</span>
+                  </div>
+                  <div>
+                    <!-- <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://arxiv.org/abs/2405.17238">ArXiv</a>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://github.com/liby99/cwe-bench-java">Dataset</a> -->
+                  </div>
+                </li>
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
                     <strong class="title">Challenges and Paths Towards AI for Software Engineering</strong>
