--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                     <span>Miroslav Pajic</span>
                   </div>
                   <div>
-                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="res/papers/neurostrata.pdf">Paper</a>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://arxiv.org/abs/2502.12267">ArXiv</a>
                   </div>
                 </li>
                 <li class="publication list-group-item list-group-item-action">
