--- a/index.html
+++ b/index.html
@@ -102,8 +102,13 @@
             </div>
             <ul>
               <li class="news-item">
-                <strong style="color: red">I am on the academic job market for the 2024-25 cycle!</strong>
-                Here is my <strong><a href="res/cv/cv-new.pdf">CV</a></strong>, <strong><a href="res/statements/teaching_statement_ziyang_li.pdf">Teaching Statement</a></strong>, and <strong><a href="res/statements/research_statement_ziyang_li.pdf">Research Statement</a></strong>.
+                <span style="color: red">
+                  May 2025 - I will be joining <a href="https://jhu.edu" target="_blank">Johns Hopkins University</a> as a Tenure-Track Assistant Professor in <a href="https://www.cs.jhu.edu" target="_blank">CS</a> and a part of <a href="https://ai.jhu.edu" target="_blank">DSAI</a>!
+                </span>
+              </li>
+              <li class="news-item">
+                Spring 2025 - I am on the academic job market for the 2024-25 cycle!
+                Here is my <a href="res/cv/cv-when-applying.pdf">CV</a>, <a href="res/statements/teaching_statement_ziyang_li.pdf">Teaching Statement</a>, and <a href="res/statements/research_statement_ziyang_li.pdf">Research Statement</a>.
               </li>
               <li class="news-item">
                 Jan 22, 2025 - Two of our papers got accepted to ICLR 2025!
@@ -132,7 +137,7 @@
                   <div class="authors">
                     <span>Jiani Huang</span>
                     <span class="me">Ziyang Li</span>
-                    
+
                     <span>Matthew Kuo</span>
                     <span>Amish Sethi</span>
                     <span>Neelay Velingker</span>
