--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
                     <strong class="title">Lobster: A GPU-Accelerated Framework for Neurosymbolic Programming</strong>
-                    <span class="conference">Preprint</span>
-                    <span class="conference">2025</span>
+                    <span class="conference">ASPLOS</span>
+                    <span class="conference">2026</span>
                   </div>
                   <div class="authors">
                     <span>Paul Biberstein</span>
@@ -163,8 +163,8 @@
                     <span>Mayur Naik</span>
                   </div>
                   <div>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://arxiv.org/abs/2503.21937">ArXiv</a>
                     <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="#">Code</a>
-                    <!-- <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="res/papers/lobster.pdf">Preprint</a> -->
                   </div>
                 </li>
                 <li class="publication list-group-item list-group-item-action">
