--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             </div>
             <div class="sidebar-item">
               <span class="icon">
-                <img src="img/penn.png" height="20px" width="20px" />
+                <img src="img/jhu.jpg" height="20px" width="20px" />
               </span>
-              <a target="_blank" href="https://www.upenn.edu">University of Pennsylvania</a>
+              <a target="_blank" href="https://jhu.edu">Johns Hopkins University</a>
             </div>
             <div class="sidebar-item">
               <i class="fa fa-university icon"></i> <a href="https://www.cis.upenn.edu" target="_blank">Computer and Information Science</a>
@@ -66,7 +66,7 @@
             <div class="sidebar-item">
               Education:
               <ul>
-                <li>Ph.D. Computer and Information Science - UPenn, 2019-Now</li>
+                <li>Ph.D. Computer and Information Science - UPenn, 2019-2025</li>
                 <li>B.S. Mathematics and B.S. Computer Science - UCSD, 2015-2019</li>
               </ul>
             </div>
@@ -78,10 +78,9 @@
               <h2>Research</h2>
             </div> -->
             <p>
-              Welcome!
-              I'm a PhD candidate in Computer Science at the <a target="_blank" href="https://upenn.edu">University of Pennsylvania</a>, advised by <a target="_blank" href="https://www.cis.upenn.edu/~mhnaik/">Prof. Mayur Naik</a>.
-              My primary area of research is <strong>programming languages</strong>.
-              My research also spans the fields of <strong>machine learning</strong> and <strong>security</strong>.
+              Welcome! I am an incoming <strong>Assistant Professor of Computer Science</strong> at <a target="_blank" href="https://jhu.edu">Johns Hopkins University</a>.
+              I received my Ph.D. in Computer Science from the <a target="_blank" href="https://upenn.edu">University of Pennsylvania</a>, where I was advised by <a target="_blank" href="https://www.cis.upenn.edu/~mhnaik/">Prof. Mayur Naik</a>.
+              My primary research interests lie in <strong>programming languages</strong> and <strong>machine learning</strong>, with additional work in <strong>security</strong> and <strong>software engineering</strong>.
             </p>
             <p>
               My dissertation research is focused on neurosymbolic programming, an emerging paradigm that bridges the gap between deep learning and logical reasoning.
@@ -101,6 +100,16 @@
               <h2>Recent News</h2>
             </div>
             <ul>
+              <li class="news-item">
+                June 2026 - I defended my <a target="_blank" href="res/dissertation.pdf">PhD thesis</a>!
+              </li>
+              <li class="news-item">
+                June 2026 - Our 🦞 Lobster paper is headed to ASPLOS 2026!
+                Yes, another seafood-themed system! The acceptance rate is less than 10%.
+                Insane! Congratulations Paul!
+                Check it out on
+                <a target="_blank" href="https://arxiv.org/abs/2503.21937">ArXiv</a>.
+              </li>
               <li class="news-item">
                 <span style="color: red">
                   May 2025 - I will be joining <a href="https://jhu.edu" target="_blank">Johns Hopkins University</a> as a Tenure-Track Assistant Professor in <a href="https://www.cs.jhu.edu" target="_blank">CS</a> and a part of <a href="https://ai.jhu.edu" target="_blank">DSAI</a>!
