--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div>
             <h1>Ziyang Li</h1>
             <div class="flex" style="margin: 20px 0;">
-              <a class="sidebar-icon" href="mailto:liby99@seas.upenn.edu" target="_blank" data-bs-toggle="tooltip" data-bs-title="Email">
+              <a class="sidebar-icon" href="mailto:ziyang@cs.jhu.edu" target="_blank" data-bs-toggle="tooltip" data-bs-title="Email">
                 <i class="fa fa-envelope-o" aria-hidden="true" style="font-size: 24px"></i>
               </a>
               <a class="sidebar-icon" href="https://github.com/liby99" target="_blank" data-bs-toggle="tooltip" data-bs-title="Github">
@@ -58,7 +58,7 @@
               <a target="_blank" href="https://jhu.edu">Johns Hopkins University</a>
             </div>
             <div class="sidebar-item">
-              <i class="fa fa-university icon"></i> <a href="https://www.cis.upenn.edu" target="_blank">Computer and Information Science</a>
+              <i class="fa fa-university icon"></i> <a href="https://www.cis.upenn.edu" target="_blank">Computer Science</a>
             </div>
             <div class="sidebar-item">
               <i class="fa fa-graduation-cap icon"></i> <a href="res/cv/cv-new.pdf" target="_blank">Curriculum Vitae</a>
