Adding another paper

--- a/index.html
+++ b/index.html
@@ -528,6 +528,22 @@
               <ul class="publications list-group">
                 <li class="publication list-group-item list-group-item-action">
                   <div class="header">
+                    <strong class="title">TurnaboutLLM: A Deductive Reasoning Benchmark from Detective Games</strong>
+                  </div>
+                  <div class="authors">
+                    <span>Yuan Yuan</span>
+                    <span>Muyu He</span>
+                    <span>Muhammad Adil Shahid</span>
+                    <span>Jiani Huang</span>
+                    <span class="me">Ziyang Li</span>
+                    <span>Li Zhang</span>
+                  </div>
+                  <div>
+                    <a class="btn btn-sm btn-tiny btn-outline-primary" target="_blank" href="https://arxiv.org/abs/2505.15712">ArXiv</a>
+                  </div>
+                </li>
+                <li class="publication list-group-item list-group-item-action">
+                  <div class="header">
                     <strong class="title">NeuroStrata: Harnessing Neurosymbolic Paradigms for Improved Design, Testability, and Verifiability of Autonomous CPS</strong>
                     <span class="conference">FSE 2025 IVR Track</span>
                   </div>
