--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
             <ul>
               <li class="news-item">
-                June 2025 - I defended my <a target="_blank" href="res/dissertation.pdf">PhD thesis</a>!
+                June 2025 - I defended my <a target="_blank" href="res/thesis.pdf">PhD thesis</a>!
               </li>
               <li class="news-item">
                 June 2025 - Our 🦞 Lobster paper is headed to ASPLOS 2026!
